--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,8 @@ php:
 before_install:
   - composer self-update
   - composer install --dev --prefer-dist --no-interaction
+
+script:
   - phpunit -c tests/phpunit.xml.travis
 
 notifications:
